# Sony

./: BluetoothDiscovery.cpp  BluetoothDiscovery.h  CMakeLists.txt  ReadMe.md  main.cpp
examples/: ConnectedDevices.cpp
